TEST_PROGRAMS/VALID/09/expressions.go
// various allowed expressions
package expressions

func main() {
    a := 1 + 3
    _ = 1 / 0
    _ = bool(int(((1))))
}
