TEST_PROGRAMS/INVALID/09/blank_assignements.go
package blank_ass

func main() {
    a, _ = 3, _
}
